--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ document.oncontextmenu = function() {return false;}
                     </label>
                 </div>
                 <div class="ym_btn1">
-                    <a href="https://open.kakao.com/o/senOqzpb">
+                    <a href="#">
                         <span>전송하기<i class="xi-long-arrow-right"></i></span>
                     </a>
                 </div>
